--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,6 +6,11 @@
       "src": "favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
+    },
+    {
+      "src": "https://github.githubassets.com/assets/apple-touch-icon-144x144-b882e354c005.png",
+      "sizes": "144x144",
+      "type": "image/png"
     }
   ],
   "start_url": ".",
